// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defineSqlSchemarelationshipForDomainObject should look right for a domain-entity 1`] = `
SqlSchemaToDomainObjectRelationship {
  "decorations": Object {
    "unique": Object {
      "domainObject": Array [
        "cin",
      ],
      "sqlSchema": Array [
        "cin",
      ],
    },
  },
  "name": Object {
    "domainObject": "TrainCarriage",
    "sqlSchema": "train_carriage",
  },
  "properties": Array [
    Object {
      "domainObject": Object {
        "name": "cin",
        "required": true,
        "type": "STRING",
      },
      "sqlSchema": SqlSchemaPropertyMetadata {
        "isArray": false,
        "isNullable": false,
        "isUpdatable": false,
        "name": "cin",
        "reference": null,
      },
    },
    Object {
      "domainObject": Object {
        "name": "carries",
        "of": Array [
          "PASSENGER",
          "FREIGHT",
        ],
        "required": true,
        "type": "ENUM",
      },
      "sqlSchema": SqlSchemaPropertyMetadata {
        "isArray": false,
        "isNullable": false,
        "isUpdatable": false,
        "name": "carries",
        "reference": null,
      },
    },
    Object {
      "domainObject": Object {
        "name": "capacity",
        "nullable": true,
        "type": "NUMBER",
      },
      "sqlSchema": SqlSchemaPropertyMetadata {
        "isArray": false,
        "isNullable": true,
        "isUpdatable": false,
        "name": "capacity",
        "reference": null,
      },
    },
    Object {
      "domainObject": Object {
        "name": "manufacturer",
        "of": Object {
          "extends": "DomainValueObject",
          "name": "TrainManufacturer",
        },
        "type": "REFERENCE",
      },
      "sqlSchema": SqlSchemaPropertyMetadata {
        "isArray": false,
        "isNullable": false,
        "isUpdatable": false,
        "name": "manufacturer_id",
        "reference": SqlSchemaReferenceMetadata {
          "method": "DIRECT_BY_NESTING",
          "of": DomainObjectReferenceMetadata {
            "extends": "DomainValueObject",
            "name": "TrainManufacturer",
          },
        },
      },
    },
  ],
}
`;

exports[`defineSqlSchemarelationshipForDomainObject should look right for a domain-event 1`] = `
SqlSchemaToDomainObjectRelationship {
  "decorations": Object {
    "unique": Object {
      "domainObject": Array [
        "trainUuid",
        "occurredAt",
      ],
      "sqlSchema": Array [
        "train_id",
        "occurred_at",
      ],
    },
  },
  "name": Object {
    "domainObject": "TrainLocatedEvent",
    "sqlSchema": "train_located_event",
  },
  "properties": Array [
    Object {
      "domainObject": Object {
        "name": "trainUuid",
        "required": true,
        "type": "STRING",
      },
      "sqlSchema": SqlSchemaPropertyMetadata {
        "isArray": false,
        "isNullable": false,
        "isUpdatable": false,
        "name": "train_id",
        "reference": SqlSchemaReferenceMetadata {
          "method": "IMPLICIT_BY_UUID",
          "of": DomainObjectReferenceMetadata {
            "extends": "DomainEntity",
            "name": "Train",
          },
        },
      },
    },
    Object {
      "domainObject": Object {
        "name": "occurredAt",
        "required": true,
        "type": "DATE",
      },
      "sqlSchema": SqlSchemaPropertyMetadata {
        "isArray": false,
        "isNullable": false,
        "isUpdatable": false,
        "name": "occurred_at",
        "reference": null,
      },
    },
    Object {
      "domainObject": Object {
        "name": "geocode",
        "of": Object {
          "extends": "DomainValueObject",
          "name": "Geocode",
        },
        "required": true,
        "type": "REFERENCE",
      },
      "sqlSchema": SqlSchemaPropertyMetadata {
        "isArray": false,
        "isNullable": false,
        "isUpdatable": false,
        "name": "geocode_id",
        "reference": SqlSchemaReferenceMetadata {
          "method": "DIRECT_BY_NESTING",
          "of": DomainObjectReferenceMetadata {
            "extends": "DomainValueObject",
            "name": "Geocode",
          },
        },
      },
    },
  ],
}
`;

exports[`defineSqlSchemarelationshipForDomainObject should look right for a domain-value-object 1`] = `
SqlSchemaToDomainObjectRelationship {
  "decorations": Object {
    "unique": Object {
      "domainObject": null,
      "sqlSchema": null,
    },
  },
  "name": Object {
    "domainObject": "PreciseGeocode",
    "sqlSchema": "precise_geocode",
  },
  "properties": Array [
    Object {
      "domainObject": Object {
        "name": "latitude",
        "type": "NUMBER",
      },
      "sqlSchema": SqlSchemaPropertyMetadata {
        "isArray": false,
        "isNullable": false,
        "isUpdatable": false,
        "name": "latitude",
        "reference": null,
      },
    },
    Object {
      "domainObject": Object {
        "name": "longitude",
        "type": "NUMBER",
      },
      "sqlSchema": SqlSchemaPropertyMetadata {
        "isArray": false,
        "isNullable": false,
        "isUpdatable": false,
        "name": "longitude",
        "reference": null,
      },
    },
  ],
}
`;
